--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.apks filter=lfs diff=lfs merge=lfs -text
 packaged_resources filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
