--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.apks filter=lfs diff=lfs merge=lfs -text
 packaged_resources filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.key filter=lfs diff=lfs merge=lfs -text
